--- a/public/screen.css
+++ b/public/screen.css
@@ -1,8 +1,119 @@
+@import url('https://fonts.googleapis.com/css?family=Arbutus+Slab');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+
 html {
-  text-size-adjust: 100%;
+  min-height: 100%;
 }
 
 body {
-  margin: 0;
-  font: 16px / 1 sans-serif;
+  font-family: 'Arbutus Slab', serif;
+}
+
+/* Top background & avatar with text box */
+
+.avatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 10em;
+  padding-bottom: 10em;
+}
+
+/* Project Bar */
+.project-bar {
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.project {
+  color: white;
+  font-size: 10px;
+  text-align: justify;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Portfolios */
+.portfolios {
+  background-color: rgb(60, 0, 74);
+  height: 60em;
+
+  /*display: flex;
+  align-items: center;
+  justify-content: center;*/
+}
+
+article {
+  background-color: #fff;
+  color: #333;
+  position: relative;
+  border-radius: 6px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 2em;
+  top: 2em;
+  bottom: 2em;
+}
+
+article div {
+  padding: 1em;
+}
+
+article header {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: green;
+  height: 50px;
+  border-radius: 6px;
+}
+
+article h2 {
+  margin-top: 0;
+}
+
+/*         Read More boxes           */
+a.more {
+  background-color: blue;
+  padding: 10px;
+  font-weight: bold;
+  position: absolute;
+  right: 10px;
+  bottom: -10px;
+  border: 1px solid black;
+  border-radius: 8px;
+}
+
+/* Hyperlink Rules */
+a:link,
+a:visited {
+  color: white;
+}
+
+a:hover,
+a:focus {
+  color: orange;
+}
+
+/* Footer with Social Media links */
+footer {
+  background-size: cover;
+  position: bottom;
+  height: auto;
+  display: flex;
+}
+
+.links {
+  background-color: rgb(59, 89, 152);
+  padding: 30px;
+  border-top: 1px solid black;
+  text-align: center;
+}
+
+.links2 {
+  font-size: 40px;
+  text-decoration: none;
+  margin-left: auto;
+  margin-right: auto;
 }
